Fixed Overflow Bug

--- a/src/components/print-todo/print-todo.styles.scss
+++ b/src/components/print-todo/print-todo.styles.scss
@@ -10,7 +10,7 @@
     // border-width: 50%;
     border-right: 0;
     border-left: 0;
-    padding: 12px 0;
+    padding: 20px 0;
     align-items: center;
     font-size: medium;
 
