--- a/src/components/todo-container/todo-container.styles.scss
+++ b/src/components/todo-container/todo-container.styles.scss
@@ -27,6 +27,8 @@
 
     .list-container {
         width: 100%;
+        height: 45vh;
+        overflow-y: auto;
         margin-top: 2rem;
     }
 
